# testsmith

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
prompts/: README.md  system_advanced.md  system_mobile_app.md  user_with_checklist.md
skills/testsmith/: SKILL.md
tests/: conftest.py  test_csv_writer.py  test_generator.py  test_loaders.py  test_providers.py  test_quality.py  test_sources_confluence.py  test_sources_figma.py  test_sources_files.py  test_sources_registry.py
tests/fixtures/: sample.md  sample.txt
testsmith/: cli.py  csv_writer.py  generator.py  interview.py  loaders.py  providers.py  quality.py
testsmith/sources/: __init__.py  base.py  confluence.py  figma.py  files.py  registry.py
