[project]
name = "testsmith-ai"
version = "0.2.1"
description = "Forge QA test cases from text, documents, Confluence pages, and Figma designs using LLMs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Priyank Shah", email = "priyank.shah217@gmail.com" },
]
keywords = ["qa", "testing", "test-cases", "llm", "anthropic", "gemini", "confluence", "figma", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "anthropic>=0.40.0",
    "google-genai>=0.3.0",
    "typer>=0.12.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/priyankshah217/testsmith"
Repository = "https://github.com/priyankshah217/testsmith"
Issues = "https://github.com/priyankshah217/testsmith/issues"
Changelog = "https://github.com/priyankshah217/testsmith/blob/main/CHANGELOG.md"

[project.scripts]
testsmith = "testsmith.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["testsmith*"]
